<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:orientation="vertical"
    tools:context=".ui.fragment.InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="@dimen/margin_20">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/transparent_bg_profile_pic" />

            <TextView
                android:id="@+id/fullName_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/userName_field"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_toEndOf="@+id/profile_image"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                android:text="@string/author_name"
                android:textColor="@color/secondaryColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/userName_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/profile_image"
                android:includeFontPadding="false"
                android:text="prasanthmaran5363@gmail.com"
                android:textColor="@color/secondaryColor"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/motto_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/userName_field"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_toEndOf="@+id/profile_image"
                android:includeFontPadding="false"
                android:text="@string/motto"
                android:textColor="@color/secondaryColor"
                android:textSize="14sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-50dp"
            android:padding="@dimen/margin_10">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/secondaryColor"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_10"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/chat_with_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/poppins_semibold"
                        android:includeFontPadding="false"
                        android:text="@string/chat_with_me"
                        android:textColor="@color/primaryColor"
                        android:textSize="@dimen/text_18sp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_below="@id/chat_with_me"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/margin_10"
                        android:src="@drawable/ic_chat"
                        app:tint="@color/primaryColor" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/secondaryColor"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_10"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/feedback_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/poppins_semibold"
                        android:includeFontPadding="false"
                        android:text="@string/send_feedback"
                        android:textColor="@color/primaryColor"
                        android:textSize="@dimen/text_18sp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_below="@id/feedback_title"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/margin_10"
                        android:src="@drawable/ic_feedback"
                        app:tint="@color/primaryColor" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_10">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/info_random_layout1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_5"
                android:hint="Instagram"
                android:textColorHint="@color/secondaryColor"
                app:boxStrokeColor="@color/secondaryColor"
                app:hintTextColor="@color/secondaryColor"
                app:startIconDrawable="@drawable/ic_instagram"
                app:startIconTint="@color/secondaryColor">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/info_random_et1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textColor="@color/secondaryColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/info_random_layout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_5"
                android:hint="Paypal"
                android:textColorHint="@color/secondaryColor"
                app:boxStrokeColor="@color/secondaryColor"
                app:boxStrokeErrorColor="@color/secondaryColor"
                app:errorIconTint="@color/secondaryColor"
                app:errorTextColor="@color/secondaryColor"
                app:hintTextColor="@color/secondaryColor"
                app:startIconDrawable="@drawable/ic_paypal"
                app:startIconTint="@color/secondaryColor">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/info_random_et2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textColor="@color/secondaryColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/info_random_layout3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_5"
                android:hint="Location"
                android:textColorHint="@color/secondaryColor"
                app:boxStrokeColor="@color/secondaryColor"
                app:boxStrokeErrorColor="@color/secondaryColor"
                app:errorIconTint="@color/secondaryColor"
                app:errorTextColor="@color/secondaryColor"
                app:hintTextColor="@color/secondaryColor"
                app:startIconDrawable="@drawable/ic_location"
                app:startIconTint="@color/secondaryColor">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/info_random_et3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textColor="@color/secondaryColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_50"
                android:layout_marginEnd="@dimen/margin_10"
                android:backgroundTint="@color/secondaryColor"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/reset_setting"
                android:textColor="@color/primaryColor" />


        </LinearLayout>

    </LinearLayout>


</ScrollView>